<?xml version="1.0"?>
<package>
  <name>sot-tools</name>
  <version>0.1.0</version>
  <description>The sot-tools package</description>

  <maintainer email="hilario@todo.todo">hilario</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sot-core</build_depend>

</package>
